@@ -1,6 +1,10 @@
 This is the CHANGELOG for amavisd-milter.
 
 20070831:
+	Added new amavisd-milter option -D client|server which allow
+	personalized header or body modifications.
+	Requested by: Brian C. Huffman <bhuffman@graze.net>
+
 	Fixed bug when amavisd communication buffer is growing.
 	Thanks to: Michael Moeller <mmoeller@kimchukmail.com>
 
@@ -242,4 +246,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.45 2007/07/29 11:41:08 reho Exp $
+$Id: CHANGES,v 1.46 2007/08/31 21:08:14 reho Exp $
